kubernetes/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - image: adminer:5.3.0
          name: adminer
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
