kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: miladrezvani/imdb-backend:1.0.0
          name: backend
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              ephemeral-storage: 1G
              memory: 1G
            requests:
              cpu: "0.5"
              ephemeral-storage: 1G
              memory: 1G
      restartPolicy: Always
