kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: miladrezvani/imdb-frontend:1.0.0
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              ephemeral-storage: 1G
              memory: 1G
            requests:
              cpu: "0.5"
              ephemeral-storage: 1G
              memory: 1G
      restartPolicy: Always
