kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:7.4.2-alpine
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              ephemeral-storage: 300M
              memory: 1G
            requests:
              cpu: "0.5"
              ephemeral-storage: 300M
              memory: 1G
      restartPolicy: Always
