kubernetes/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  ports:
    - name: "adminer"
      port: 8080
      targetPort: 8080
  selector:
    app: adminer
