kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: "frontend"
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
