kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - name: "mysql"
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
