kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: "redis"
      port: 6379
      targetPort: 6379
  selector:
    app: redis
